2009-03-08	IGNF <didier.richard@ign.fr>

	* src/PJ_gstmerc.c: Correction of a bug in inv() function :
	the projected origin coordinates where descaled.

	* nad/testIGNF: Add a comment on the mandatory existance of the world grid
	in order to make the test.

	* ChangeLog: this comments

2009-01-26  Frank Warmerdam  <warmerdam@pobox.com>

	* src/*.c: Remove SCCSID and lint stuff from all source files.

2009-01-23  Frank Warmerdam  <warmerdam@pobox.com>

	* src/biveval.c: Avoid use of static variables which interfere with
	re-entrancy (#24)" 

2009-01-05  Frank Warmerdam  <warmerdam@pobox.com>

	* src: Removed CVS log messages from various files since they are
	not maintained by subversion.

2008-09-16  Frank Warmerdam  <warmerdam@pobox.com>

	* src/{Makefile.am, Makefile.in}: Added '-no-undefined' option to
	LDFLAGS. This is required to properly build a library in some
	environments, MinGW in particular.

2008-08-21  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 4.6.1RC2 

	* nad/td_out.dist: backed out erroneous changes in 4.6.0 that lost 
	datum shifts with grid shift files.  Added stere (#12) test. 

	* nmake.opt: Added /Op to avoid stere errors per ticket #12.

2008-08-07  Frank Warmerdam  <warmerdam@pobox.com>

	* nmake.opt, nad/makefile.vc: Make sure we use PROJ_LIB_DIR when
	installing nad directory support files on windows.

2008-07-28 IGNF <didier.richard@ign.fr>

	* PJ_glabsgm.c : refactoring for better understanding of the projection's
	formula.
	* copy of PJ_glabsgm.c to PJ_gstmerc.c and make changes accordingly in src
	and nad directories.

2008-07-21  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 4.6.1 release.

	* rename INSTALL.TXT to INSTALL since the damn distribution generator
	won't stand for the alternate naming.  Change makefile.vc to use 
	install-all target instead of install.  What are the chances anyone 
	will think of trying that?  Not high.

	* nad/epsg: regenerated from EPSG 6.17.  This should also correct the